<resources>
    <string name="app_name">LucyAR</string>

    <string name="camera">CAMERA</string>
    <string name="cancel">CANCEL</string>
    <string name="send">SEND</string>
    <string name="menu">MENU</string>
    <string name="search">SEARCH</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="AR_DRAW">AR Draw</string>
    <string name="IMAGE_CAPTURE">Image Capture</string>
    <string name="AR_PLACE">AR Place</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="profile_selection">I am a...</string>
    <string name="furniture_provider">Furniture Provider</string>
    <string name="tenant">Tenant</string>

</resources>
