<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"

xmlns:app="http://schemas.android.com/apk/res-auto">

<item

    android:id="@+id/action_cancel"

    android:enabled="true"

    android:icon="@drawable/cancel"

    android:title="@string/cancel"

    app:showAsAction="ifRoom" />

<item

    android:id="@+id/action_send"

    android:enabled="true"

    android:icon="@drawable/send"

    android:title="@string/send"

    app:showAsAction="ifRoom" />

<item

    android:id="@+id/action_camera"

    android:enabled="true"

    android:icon="@drawable/camera"

    android:title="@string/camera"

    app:showAsAction="ifRoom" />

    <item

        android:id="@+id/action_menu"

        android:enabled="true"

        android:icon="@drawable/menu"

        android:title="@string/menu"

        app:showAsAction="ifRoom" />

    <item

        android:id="@+id/action_search"

        android:enabled="true"

        android:icon="@drawable/search"

        android:title="@string/search"

        app:showAsAction="ifRoom" />

</menu>

